--- a/day-1-drumkit/index.html
+++ b/day-1-drumkit/index.html
@@ -63,6 +63,8 @@
     <audio src="sounds/tom.wav" data-key="75"></audio>
     <audio src="sounds/tink.wav" data-key="76"></audio>
   </main>
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
