--- a/day-2-clock/index.html
+++ b/day-2-clock/index.html
@@ -13,13 +13,13 @@
 <body>
   <div class="clock">
     <div class="clock__face">
-      <div class="clock__hand clock__hand--hour-hand"></div>
-      <div class="clock__hand clock__hand--min-hand"></div>
-      <div class="clock__hand clock__hand--second-hand"></div>
+      <div class="clock__hand clock__hand--hour"></div>
+      <div class="clock__hand clock__hand--min"></div>
+      <div class="clock__hand clock__hand--sec"></div>
     </div>
   </div>
 </body>
 
-<!-- <script src="js/main.js"></script> -->
+<script src="js/main.js"></script>
 
 </html>
