Add day 3 project to index file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="day-1-drumkit/index.html">Day 1</a></li>
     <li><a href="day-2-clock/index.html">Day 2</a></li>
+    <li><a href="day-3-cssvars/index.html">Day 3</a></li>
   </ul>
 </body>
 </html>
