Day-5: Convert CSS to BEM

--- a/day-5-flexpanels/index.html
+++ b/day-5-flexpanels/index.html
@@ -11,31 +11,31 @@
   </head>
 
   <body>
-    <div class="panels">
-      <div class="panel panel1">
-        <p>Hey</p>
-        <p>Let's</p>
-        <p>Dance</p>
+    <div class="f-panels">
+      <div class="f-panels__panel panel--1">
+        <p class="panel__p">Hey</p>
+        <p class="panel__p">Let's</p>
+        <p class="panel__p">Dance</p>
       </div>
-      <div class="panel panel2">
-        <p>Give</p>
-        <p>Take</p>
-        <p>Receive</p>
+      <div class="f-panels__panel panel--2">
+        <p class="panel__p">Give</p>
+        <p class="panel__p">Take</p>
+        <p class="panel__p">Receive</p>
       </div>
-      <div class="panel panel3">
-        <p>Experience</p>
-        <p>It</p>
-        <p>Today</p>
+      <div class="f-panels__panel panel--3">
+        <p class="panel__p">Experience</p>
+        <p class="panel__p">It</p>
+        <p class="panel__p">Today</p>
       </div>
-      <div class="panel panel4">
-        <p>Give</p>
-        <p>All</p>
-        <p>You can</p>
+      <div class="f-panels__panel panel--4">
+        <p class="panel__p">Give</p>
+        <p class="panel__p">All</p>
+        <p class="panel__p">You can</p>
       </div>
-      <div class="panel panel5">
-        <p>Life</p>
-        <p>In</p>
-        <p>Motion</p>
+      <div class="f-panels__panel panel--5">
+        <p class="panel__p">Life</p>
+        <p class="panel__p">In</p>
+        <p class="panel__p">Motion</p>
       </div>
     </div>
   </body>
