--- a/day-5-flexpanels/index.html
+++ b/day-5-flexpanels/index.html
@@ -11,28 +11,28 @@
   </head>
 
   <body>
-    <div class="f-panels">
-      <div class="f-panels__panel panel--1">
+    <div class="gallery">
+      <div class="gallery__panel panel--1">
         <p class="panel__p">Hey</p>
         <p class="panel__p">Let's</p>
         <p class="panel__p">Dance</p>
       </div>
-      <div class="f-panels__panel panel--2">
+      <div class="gallery__panel panel--2">
         <p class="panel__p">Give</p>
         <p class="panel__p">Take</p>
         <p class="panel__p">Receive</p>
       </div>
-      <div class="f-panels__panel panel--3">
+      <div class="gallery__panel panel--3">
         <p class="panel__p">Experience</p>
         <p class="panel__p">It</p>
         <p class="panel__p">Today</p>
       </div>
-      <div class="f-panels__panel panel--4">
+      <div class="gallery__panel panel--4">
         <p class="panel__p">Give</p>
         <p class="panel__p">All</p>
         <p class="panel__p">You can</p>
       </div>
-      <div class="f-panels__panel panel--5">
+      <div class="gallery__panel panel--5">
         <p class="panel__p">Life</p>
         <p class="panel__p">In</p>
         <p class="panel__p">Motion</p>
