--- a/day-5-flexpanels/index.html
+++ b/day-5-flexpanels/index.html
@@ -6,7 +6,7 @@
     <title>Flex Panels 💪</title>
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
 
