Add day 5 to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="day-1-drumkit/index.html">Day 1</a></li>
     <li><a href="day-2-clock/index.html">Day 2</a></li>
     <li><a href="day-3-cssvars/index.html">Day 3</a></li>
+    <li><a href="day-5-flexpanels/index.html">Day 5</a></li>
   </ul>
 </body>
 </html>
